working on home and about section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="#" class="logo">Portfolio</a>
 
     <i class='bx bx-menu' id="menu-icon"></i>
-
+    
     <nav class="navbar">
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
@@ -45,7 +45,21 @@
     </div>
 
     <div class="home-img">
-      <img src="" alt="">
+      <img src="images/logo-c.png" alt="">
+    </div>
+  </section>
+
+  <!-- about section design -->
+  <section class="about" id="about">
+    <div class="about-img">
+      <img src="images/Chansoo_Han.jpg" alt="">
+    </div>
+
+    <div class="about-content">
+      <h2 class="heading">About <span>Me</span></h2>
+      <h3>Full Stack Developer</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus at modi praesentium ex eligendi libero ea deserunt ab ullam. Ullam facilis magnam ipsam corporis autem consequatur provident praesentium, pariatur sunt quibusdam expedita sit eius distinctio dignissimos, necessitatibus quas! Totam nam sed dicta laboriosam optio repudiandae omnis officia!</p>
+      <a href="#" class="btn">Read More</a>
     </div>
   </section>
 
