--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
   <!-- header design -->
   <header class="header">
-    <a href="#" class="logo">Portfolio</a>
+    <a href="#" class="logo"><img src="images/logo-c.png" alt="">Portfolio</a>
 
     <i class='bx bx-menu' id="menu-icon"></i>
-    
+
     <nav class="navbar">
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
@@ -61,6 +61,39 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus at modi praesentium ex eligendi libero ea deserunt ab ullam. Ullam facilis magnam ipsam corporis autem consequatur provident praesentium, pariatur sunt quibusdam expedita sit eius distinctio dignissimos, necessitatibus quas! Totam nam sed dicta laboriosam optio repudiandae omnis officia!</p>
       <a href="#" class="btn">Read More</a>
     </div>
+  </section>
+
+  <!-- services section design -->
+  <section class="services" id="services">
+    <h2 class="heading">My <span>Services</span></h2>
+    <div class="services-container">
+      <div class="services-box">
+        <i class='bx bx-code-alt' ></i>
+        <h3>Web Development</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt esse commodi obcaecati numquam quae illum reiciendis amet a similique sint!</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+
+      <div class="services-box">
+        <i class='bx bxs-paint' ></i>
+        <h3>Graphic Design</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt esse commodi obcaecati numquam quae illum reiciendis amet a similique sint!</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+
+      <div class="services-box">
+        <i class='bx bx-bar-chart-alt'></i>
+        <h3>Digital Marketing</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt esse commodi obcaecati numquam quae illum reiciendis amet a similique sint!</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- portfolio section design -->
+  <section class="portfolio" id="portfolio">
+    <h2 class="heading">Latest <span>Project</span></h2>
+
   </section>
 
   <!-- custom js -->
