--- a/index.html
+++ b/index.html
@@ -93,7 +93,15 @@
   <!-- portfolio section design -->
   <section class="portfolio" id="portfolio">
     <h2 class="heading">Latest <span>Project</span></h2>
-
+    <div class="portfolio-cpntainer">
+      <div class="portfolio-box">
+        <img src="images/portfolio1.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- custom js -->
