added contact section

--- a/index.html
+++ b/index.html
@@ -93,15 +93,79 @@
   <!-- portfolio section design -->
   <section class="portfolio" id="portfolio">
     <h2 class="heading">Latest <span>Project</span></h2>
-    <div class="portfolio-cpntainer">
+    <div class="portfolio-container">
       <div class="portfolio-box">
         <img src="images/portfolio1.jpg" alt="">
         <div class="portfolio-layer">
           <h4>Web Design</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
+          <a href="#"><i class='bx bx-link-external' ></i></a>
+        </div>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="images/portfolio2.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
+          <a href="#"><i class='bx bx-link-external' ></i></a>
+        </div>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="images/portfolio3.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
+          <a href="#"><i class='bx bx-link-external' ></i></a>
+        </div>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="images/portfolio4.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
+          <a href="#"><i class='bx bx-link-external' ></i></a>
+        </div>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="images/portfolio5.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
+          <a href="#"><i class='bx bx-link-external' ></i></a>
+        </div>
+      </div>
+
+      <div class="portfolio-box">
+        <img src="images/portfolio6.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
+          <a href="#"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
     </div>
+  </section>
+
+  <!-- contact section design -->
+  <section class="contact" id="contact">
+    <h2 class="heading">Contact <span>Me!</span></h2>
+
+    <form action="#">
+      <div class="input-box">
+        <input type="text" placeholder="Full Name">
+        <input type="email" placeholder="Email Address">
+      </div>
+      <div class="input-box">
+        <input type="number" placeholder="Mobile Number">
+        <input type="text" placeholder="Subject">
+      </div>
+      <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+      <input type="submit" value="Send Message" class="btn">
+    </form>
   </section>
 
   <!-- custom js -->
