adding js functions

--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@
     </form>
   </section>
 
+  <!-- footer design -->
+  <footer class="footer">
+    <div class="footer-text">
+      <p>Copyright &copy; 2023 by Chansoo | All Rights Reserved.</p>
+    </div>
+
+    <div class="footer-iconTop">
+      <a href="#home"><i class='bx bx-up-arrow-alt' ></i></a>
+    </div>
+  </footer>
+
   <!-- custom js -->
   <script src="js/script.js"></script>
 </body>
