--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
     </div>
   </footer>
 
+  <!-- scroll reveal -->
+  <script src="https://unpkg.com/scrollreveal"></script>
+
   <!-- custom js -->
   <script src="js/script.js"></script>
 </body>
