added skills section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h3>Hello, It's me</h3>
       <h1>Chansoo Han</h1>
       <h3>And I'm a <span>Full Stack Developer</span></h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A ex libero autem minima impedit quia placeat? Excepturi aperiam sit nam non cumque. Dolore velit suscipit aspernatur cupiditate at voluptatum nemo!</p>
+      <p>passionate about creating interactive applications and experiences on the web</p>
       <div class="social-media">
         <a href="#"><i class='bx bxl-facebook' ></i></a>
         <a href="#"><i class='bx bxl-twitter'></i></a>
@@ -58,13 +58,112 @@
     <div class="about-content">
       <h2 class="heading">About <span>Me</span></h2>
       <h3>Full Stack Developer</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus at modi praesentium ex eligendi libero ea deserunt ab ullam. Ullam facilis magnam ipsam corporis autem consequatur provident praesentium, pariatur sunt quibusdam expedita sit eius distinctio dignissimos, necessitatibus quas! Totam nam sed dicta laboriosam optio repudiandae omnis officia!</p>
+      <p>
+        I have extensive knowledge of HTML, CSS, Javascript, React JS, Node JS, Express JS, EJS, JQuery, AJAX, Ruby on Rails, PostgreSQL, Git and Github.<br />
+        Additionally WordPress, Adobe Photoshop and Adobe Illustrator combined with my communication and problem-solving skills with an ambition to continue learning.
+      </p>
       <a href="#" class="btn">Read More</a>
     </div>
   </section>
 
+  <!-- skills section design -->
+  <section class="skills" id="skills">
+    <h2 class="heading">My <span>Skills</span></h2>
+    <div class="skills-container">
+      <div class="bars">
+        <div class="bars-box">
+          <h3>HTML</h3>
+          <span class="percent">85%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar html-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>CSS</h3>
+          <span class="percent">80%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar css-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>Javascript</h3>
+          <span class="percent">80%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar js-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>React</h3>
+          <span class="percent">80%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar react-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>Node JS</h3>
+          <span class="percent">70%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar node-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>Express JS</h3>
+          <span class="percent">70%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar express-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>EJS</h3>
+          <span class="percent">80%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar ejs-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>JQuery</h3>
+          <span class="percent">70%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar jquery-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>Ajax</h3>
+          <span class="percent">70%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar ajax-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>PostgreSQL</h3>
+          <span class="percent">70%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar postgresql-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>Ruby on Rails</h3>
+          <span class="percent">70%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar ruby-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>Git and Github</h3>
+          <span class="percent">70%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar git-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>WordPress</h3>
+          <span class="percent">70%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar wp-bar"></div>
+        </div>
+        <div class="bars-box">
+          <h3>Adobe Photoshop and Illustrator</h3>
+          <span class="percent">70%</span>
+          <div class="light-bar"></div>
+          <div class="percent-bar adobe-bar"></div>
+        </div>
+      </div>
+      <div class="skills-img">
+        <img src="/images/languages.png" alt="">
+      </div>
+    </div>
+  </section>
+
   <!-- services section design -->
-  <section class="services" id="services">
+  <!-- <section class="services" id="services">
     <h2 class="heading">My <span>Services</span></h2>
     <div class="services-container">
       <div class="services-box">
@@ -88,7 +187,7 @@
         <a href="#" class="btn">Read More</a>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- portfolio section design -->
   <section class="portfolio" id="portfolio">
