removed services section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar">
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
-      <a href="#services">Services</a>
+      <a href="#skills">Skills</a>
       <a href="#portfolio">Portfolio</a>
       <a href="#contact">Contact</a>
     </nav>
@@ -161,33 +161,6 @@
       </div>
     </div>
   </section>
-
-  <!-- services section design -->
-  <!-- <section class="services" id="services">
-    <h2 class="heading">My <span>Services</span></h2>
-    <div class="services-container">
-      <div class="services-box">
-        <i class='bx bx-code-alt' ></i>
-        <h3>Web Development</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt esse commodi obcaecati numquam quae illum reiciendis amet a similique sint!</p>
-        <a href="#" class="btn">Read More</a>
-      </div>
-
-      <div class="services-box">
-        <i class='bx bxs-paint' ></i>
-        <h3>Graphic Design</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt esse commodi obcaecati numquam quae illum reiciendis amet a similique sint!</p>
-        <a href="#" class="btn">Read More</a>
-      </div>
-
-      <div class="services-box">
-        <i class='bx bx-bar-chart-alt'></i>
-        <h3>Digital Marketing</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt esse commodi obcaecati numquam quae illum reiciendis amet a similique sint!</p>
-        <a href="#" class="btn">Read More</a>
-      </div>
-    </div>
-  </section> -->
 
   <!-- portfolio section design -->
   <section class="portfolio" id="portfolio">
