--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
   <section class="portfolio" id="portfolio">
     <h2 class="heading">Latest <span>Project</span></h2>
     <div class="portfolio-container">
-      <div class="portfolio-box">
+      <!-- <div class="portfolio-box">
         <img src="images/portfolio1.jpg" alt="">
         <div class="portfolio-layer">
           <h4>Web Design</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
-          <a href="#"><i class='bx bx-link-external' ></i></a>
+          <a href="#" target="_blank"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
 
@@ -180,43 +180,44 @@
         <div class="portfolio-layer">
           <h4>Web Design</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
-          <a href="#"><i class='bx bx-link-external' ></i></a>
+          <a href="#" target="_blank"><i class='bx bx-link-external' ></i></a>
+        </div>
+      </div> -->
+
+      <div class="portfolio-box">
+        <img src="images/killbill.png" alt="">
+        <div class="portfolio-layer">
+          <h4>KillBills App</h4>
+          <p>KillBills is to solve the problem of forgetting or missing bill payments.</p>
+          <a href="https://github.com/oashitta/KillBills" target="_blank"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
 
       <div class="portfolio-box">
-        <img src="images/portfolio3.jpg" alt="">
+        <img src="images/photolab.png" alt="">
         <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
-          <a href="#"><i class='bx bx-link-external' ></i></a>
+          <h4>Photo Labs App</h4>
+          <p>PhotoLabs is a full stack application using React to show photos and like them.
+          </p>
+          <a href="https://github.com/Alex-1980/photolabs-starter" target="_blank"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
 
       <div class="portfolio-box">
-        <img src="images/portfolio4.jpg" alt="">
+        <img src="images/quiz.png" alt="">
         <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
-          <a href="#"><i class='bx bx-link-external' ></i></a>
+          <h4>Quiz App</h4>
+          <p>QuizApp is to create a quiz, take a quiz and send a link of the quiz result to friends.</p>
+          <a href="https://github.com/vktr-r2/Quiz_App" target="_blank"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
 
       <div class="portfolio-box">
-        <img src="images/portfolio5.jpg" alt="">
+        <img src="images/jungle-rails.png" alt="">
         <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
-          <a href="#"><i class='bx bx-link-external' ></i></a>
-        </div>
-      </div>
-
-      <div class="portfolio-box">
-        <img src="images/portfolio6.jpg" alt="">
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
-          <a href="#"><i class='bx bx-link-external' ></i></a>
+          <h4>Jungle Rails App</h4>
+          <p>Jungle Rails is mini e-commerce application built with Rails.</p>
+          <a href="https://github.com/Alex-1980/jungle-rails" target="_blank"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
     </div>
@@ -226,7 +227,7 @@
   <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me!</span></h2>
 
-    <form action="#">
+    <form action="devhan1207@gmail.com" method="POST" enctype="text/plain">
       <div class="input-box">
         <input type="text" placeholder="Full Name">
         <input type="email" placeholder="Email Address">
