--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
       <h3>And I'm a <span>Full Stack Developer</span></h3>
       <p>passionate about creating interactive applications and experiences on the web</p>
       <div class="social-media">
-        <a href="#"><i class='bx bxl-facebook' ></i></a>
-        <a href="#"><i class='bx bxl-twitter'></i></a>
-        <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-        <a href="#"><i class='bx bxl-linkedin' ></i></a>
+        <a href="https://www.linkedin.com/in/coding-han/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+        <a href="https://github.com/Alex-1980" target="_blank"><i class='bx bxl-github'></i></a>
       </div>
-      <a href="#" class="btn">Download CV</a>
+      <a href="https://flowcv.com/resume/0qds62ceu0" target="_blank" class="btn">Download CV</a>
     </div>
 
     <div class="home-img">
