--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <div class="social-media">
         <a href="https://www.linkedin.com/in/coding-han/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
         <a href="https://github.com/Alex-1980" target="_blank"><i class='bx bxl-github'></i></a>
+        <a href="#contact"><i class='bx bx-envelope'></i></a>
       </div>
       <a href="https://flowcv.com/resume/0qds62ceu0" target="_blank" class="btn">Download CV</a>
     </div>
