fixed contact section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me!</span></h2>
 
-    <form action="devhan1207@gmail.com" method="POST" enctype="text/plain">
+    <form action="mailto:devhan1207@gmail.com" method="POST" enctype="text/plain">
       <div class="input-box">
         <input type="text" placeholder="Full Name">
         <input type="email" placeholder="Email Address">
