added shoppy in portfolio section

--- a/index.html
+++ b/index.html
@@ -165,23 +165,14 @@
   <section class="portfolio" id="portfolio">
     <h2 class="heading">Latest <span>Project</span></h2>
     <div class="portfolio-container">
-      <!-- <div class="portfolio-box">
-        <img src="images/portfolio1.jpg" alt="">
+      <div class="portfolio-box">
+        <img src="images/home-page-logged in.png" alt="">
         <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
-          <a href="#" target="_blank"><i class='bx bx-link-external' ></i></a>
+          <h4>Shoppy App</h4>
+          <p>Shoppy is a full stack application using React and Firebase that allows users to shop clothes and admin to add products.</p>
+          <a href="https://github.com/Alex-1980/shoppy" target="_blank"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
-
-      <div class="portfolio-box">
-        <img src="images/portfolio2.jpg" alt="">
-        <div class="portfolio-layer">
-          <h4>Web Design</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, corporis.</p>
-          <a href="#" target="_blank"><i class='bx bx-link-external' ></i></a>
-        </div>
-      </div> -->
 
       <div class="portfolio-box">
         <img src="images/killbill.png" alt="">
